Define cleanup steps and clean up all sources