@@ -27,16 +27,13 @@
 
 package tools;
 
-import javax.swing.*;
 import java.io.File;
 import java.io.IOException;
-import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.Arrays;
-import java.util.Calendar;
 
 public class JPCDebuggerControl extends EmulatorControl {
     private final Object debugger, pc;
@@ -61,7 +58,7 @@ public class JPCDebuggerControl extends EmulatorControl {
     }
 
     public JPCDebuggerControl(String jar, String[] args, boolean showScreen, boolean disablePIT) throws IOException {
-        URL[] urls1 = new URL[] { new File(jar).toURL() };
+        URL[] urls1 = { new File(jar).toURL() };
         cl1 = new URLClassLoader(urls1, EmulatorControl.class.getClassLoader());
 
         try {
@@ -103,6 +100,7 @@ public class JPCDebuggerControl extends EmulatorControl {
         }
     }
 
+    @Override
     public String disam(byte[] code, Integer ops, Boolean is32Bit) {
         try {
             return (String)disam.invoke(pc, code, ops, is32Bit);
@@ -115,6 +113,7 @@ public class JPCDebuggerControl extends EmulatorControl {
         }
     }
 
+    @Override
     public int x86Length(byte[] code, Boolean is32Bit) {
         try {
             return (Integer)x86Length.invoke(pc, code, is32Bit);
@@ -125,10 +124,11 @@ public class JPCDebuggerControl extends EmulatorControl {
         }
     }
 
+    @Override
     public String executeInstruction() throws IOException {
         try {
             int blockLength = (Integer)execute.invoke(debugger);
-            return (String)instructionInfo.invoke(pc, new Integer(blockLength));
+            return (String)instructionInfo.invoke(pc, Integer.valueOf(blockLength));
         } catch (InvocationTargetException e) {
             Throwable c = e.getCause();
             if (c instanceof IllegalStateException)
@@ -141,6 +141,7 @@ public class JPCDebuggerControl extends EmulatorControl {
         }
     }
 
+    @Override
     public int[] getState() throws IOException {
         try {
             return (int[])state.invoke(pc);
@@ -151,9 +152,10 @@ public class JPCDebuggerControl extends EmulatorControl {
         }
     }
 
+    @Override
     public void setPhysicalMemory(int addr, byte[] data) throws IOException {
         try {
-            setPhysicalMemory.invoke(pc, new Integer(addr), data);
+            setPhysicalMemory.invoke(pc, Integer.valueOf(addr), data);
         } catch (InvocationTargetException e) {
             throw new RuntimeException(e.getMessage());
         } catch (IllegalAccessException e) {
@@ -161,9 +163,10 @@ public class JPCDebuggerControl extends EmulatorControl {
         }
     }
 
+    @Override
     public Integer getPhysicalPage(Integer page, byte[] data) throws IOException {
         try {
-            return (Integer)getPage.invoke(pc, page, data, new Boolean(false));
+            return (Integer)getPage.invoke(pc, page, data, Boolean.valueOf(false));
         } catch (IllegalAccessException e) {
             e.printStackTrace();
         } catch (InvocationTargetException e) {
@@ -172,9 +175,10 @@ public class JPCDebuggerControl extends EmulatorControl {
         return 0;
     }
 
+    @Override
     public Integer getLinearPage(Integer page, byte[] data) throws IOException {
         try {
-            return (Integer)getPage.invoke(pc, page, data, new Boolean(true));
+            return (Integer)getPage.invoke(pc, page, data, Boolean.valueOf(true));
         } catch (IllegalAccessException e) {
             e.printStackTrace();
         } catch (InvocationTargetException e) {
@@ -183,6 +187,7 @@ public class JPCDebuggerControl extends EmulatorControl {
         return 0;
     }
 
+    @Override
     public void destroy() {
         try {
             destroy.invoke(pc);
@@ -193,26 +198,32 @@ public class JPCDebuggerControl extends EmulatorControl {
         }
     }
 
+    @Override
     public byte[] getCMOS() throws IOException {
         throw new IllegalStateException("Unimplemented!");
     }
 
+    @Override
     public int[] getPit() throws IOException {
         throw new IllegalStateException("Unimplemented!");
     }
 
+    @Override
     public int getPITIntTargetEIP() throws IOException {
         throw new IllegalStateException("Unimplemented!");
     }
 
+    @Override
     public void keysDown(String keys) {
         throw new IllegalStateException("Unimplemented!");
     }
 
+    @Override
     public void keysUp(String keys) {
         throw new IllegalStateException("Unimplemented!");
     }
 
+    @Override
     public void sendMouse(Integer dx, Integer dy, Integer dz, Integer buttons) {
         throw new IllegalStateException("Unimplemented!");
     }
